# parser_HH

./: README.md  pyproject.toml
progect/: DB_manager.py  config.py  main.py  utils.py
