[tool.poetry]
name = "db-course-work"
version = "0.1.0"
description = ""
authors = ["geydarovr <www.rufat@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
google-api-python-client = "^2.106.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
